# jcm

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release.yml
docs/: COMMANDS.md  DEVELOPMENT.md
src/: cert.rs  cli.rs  commands.rs  config.rs  elevation.rs  jvm.rs  keystore.rs  lib.rs  logging.rs  main.rs  ops.rs  paths.rs  platform.rs  temp.rs
tests/: config_parse.rs  doctor.rs  env.rs
