[package]
name = "jcm"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.103"
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
hex = "0.4.3"
pem = "3.0.6"
rustls = "0.23.41"
rustls-pki-types = "1.15.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
url = "2.5.8"
which = "8.0.4"
x509-parser = "0.18.1"

[target."cfg(windows)".dependencies]
runas = "1.2.0"
windows-sys = { version = "0.48", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Threading"] }

[target."cfg(unix)".dependencies]
libc = "0.2.186"
